<resources>
    <string name="app_name">Detector2</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="detect_guide_start">Press start to begin the detection</string>
    <string name="detect_guide_stop">Press pause to stop the detection</string>

    <string name="register_button">Register model</string>
    <string name="calibrate_button">Calibrate camera</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="action_select_model">Select model</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_enroll">Manage models</string>
    <string name="action_calibrate">Calibrate camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New image</string>
    <string name="action_load">Load model</string>
    <string name="action_delete">Delete model</string>
    <string name="action_save">Save model</string>

    <string name="select_model_title">Select model</string>
    <string name="no_models">No models found</string>
    <string name="new_model">New model</string>
    <string name="model_loaded">Model loaded</string>
    <string name="model_saved">Model saved</string>
    <string name="model_deleted">Model deleted</string>
    <string name="new_model_title">New model</string>
    <string name="existing_model_title">Existing model</string>
    <string name="overwrite">Overwrite</string>
    <string name="update">Update</string>

    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating&#8230;</string>
    <string name="please_wait">Please, wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>

    <string name="title_activity_model_registration">Model registration</string>
    <string name="title_activity_camera_calibration">Camera calibration</string>
    <string name="title_activity_settings">Detection settings</string>
    <string name="title_activity_enrollment_settings">Enrollment settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_header_general">General</string>
    <string name="pref_title_resolution">Resolution</string>
    <string name="pref_title_fast_matching">Fast matching</string>
    <string name="pref_title_matching_ratio">Matching ratio</string>
    <string name="pref_title_ransac_iter_count">RANSAC iteration count</string>
    <string name="pref_title_ransac_reprojection_error">RANSAC reprojection error</string>
    <string name="pref_title_ransac_confidence">RANSAC confidence</string>
    <string name="pref_title_pnp_method">PnP method</string>
    <string-array name="pref_pnp_method_titles">
        <item>Iterative</item>
        <item>EPNP</item>
        <item>P3P</item>
        <item>DLS</item>
        <item>UPNP</item>
    </string-array>
    <string-array name="pref_pnp_method_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_title_inliers_threshold">Inliers threshold</string>
    <string name="pref_title_descriptor_type">Descriptor type</string>
    <string-array name="pref_descriptor_type_titles">
        <item>ORB</item>
        <item>AKAZE</item>
    </string-array>
    <string-array name="pref_descriptor_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_fsx">Focal length / sensor width</string>
    <string name="pref_title_fsy">Focal length / sensor height</string>

    <string name="pref_header_orb_features">ORB Features</string>
    <string name="pref_title_orb_num_features">Number of features</string>
    <string name="pref_title_orb_scale_factor">Scale factor</string>
    <string name="pref_title_orb_num_levels">Number of levels</string>
    <string name="pref_title_orb_edge_threshold">Edge threshold</string>
    <string name="pref_title_orb_first_level">First level</string>
    <string name="pref_title_orb_wta_k">WTA K</string>
    <string name="pref_title_orb_score_type">Score type</string>
    <string-array name="pref_orb_score_type_titles">
        <item>Harris</item>
        <item>Fast</item>
    </string-array>
    <string-array name="pref_orb_score_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_title_orb_patch_size">Patch size</string>
    <string name="pref_title_orb_fast_threshold">Fast threshold</string>

    <string name="pref_header_akaze_features">AKAZE Features</string>
    <string name="pref_title_akaze_descriptor_type">Descriptor type</string>
    <string-array name="pref_akaze_descriptor_type_titles">
        <item>KAZE Upright</item>
        <item>KAZE</item>
        <item>MLDB Upright</item>
        <item>MLDB</item>
    </string-array>
    <string-array name="pref_akaze_descriptor_type_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_title_akaze_descriptor_size">Descriptor size</string>
    <string name="pref_title_akaze_descriptor_channels">Descriptor channels</string>
    <string name="pref_title_akaze_threshold">Threshold</string>
    <string name="pref_title_akaze_n_octaves">Num. octaves</string>
    <string name="pref_title_akaze_n_octave_layers">Num. octave layers</string>
    <string name="pref_title_akaze_diffusivity">Diffusivity</string>
    <string-array name="pref_akaze_diffusivity_titles">
        <item>PM G1</item>
        <item>PM G2</item>
        <item>Weickert</item>
        <item>Charbonnier</item>
    </string-array>
    <string-array name="pref_akaze_diffusivity_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_header_camera">Camera</string>

</resources>
