<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_start_stop"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_start"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stop"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/action_start"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_select_model"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/action_select_model"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_enroll"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/action_enroll"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calibrate"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/action_calibrate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contours"
        android:checkable="true"
        android:title="Contours mode"
        app:showAsAction="never" />
</menu>