<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="es.uvigo.fran.detector2.EnrollmentSettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="es.uvigo.fran.detector2.EnrollmentSettingsActivity$OrbPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_orb_features" />

    <header
        android:fragment="es.uvigo.fran.detector2.EnrollmentSettingsActivity$AkazePreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_akaze_features" />

</preference-headers>
